# ResearchAlgorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sortings.sln
sortings/: Func.h  HeapSorting.cpp  HeapSorting.h  InsertSorting.cpp  InsertSorting.h  MergeSorting.cpp  MergeSorting.h  QuickSort.cpp  QuickSort.h  ServiceFunction.cpp  ServiceFunction.h  Sortings.h  TestFunction.cpp  TestFunction.h  main.cpp  resource.h  sortings.aps  sortings.cpp  sortings.vcxproj  sortings.vcxproj.filters  stdafx.cpp
